--- a/index.html
+++ b/index.html
@@ -6,13 +6,16 @@
     <meta name="keywords" content="젠틀몬스터, 안경, 선글라스, 아이웨어">
     <meta name="description" content="아이웨어브랜드 젠틀몬스터입니다">
     <title>젠틀몬스터</title>
+    <!-- swiper slide -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css"/>
+    <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
+    <!-- 파비콘 -->
+    <link rel="shortcut icon" href="./images/favicon.png" type="image/x-icon">
+    <link rel="icon" href="./images/favicon.png" type="image/x-icon">
     <!-- 외부스타일시트 -->
     <link rel="stylesheet" href="./styles/reset.css">
     <link rel="stylesheet" href="./styles/common.css">
     <link rel="stylesheet" href="./styles/index.css">
-    <!-- 파비콘 -->
-    <link rel="shortcut icon" href="./images/icon_eyeglasses.png" type="image/x-icon">
-    <link rel="icon" href="./images/icon_eyeglasses.png" type="image/x-icon">
 </head>
 <body>
     <header>
@@ -28,7 +31,32 @@
             </form>
             <a href="#" id="login"><img src="./images/icon_login.png" alt="로그인"></a>
             <a href="#" id="cart"><img src="./images/icon_cart.png" alt="장바구니"></a>
-            <a href="#" id="menu"><img src="./images/icon_menu.png" alt="메뉴"></a>
+            <a href="#" id="nav"><img src="./images/icon_menu.png" alt="메뉴"></a>
+        </div>
+        <!-- nav 클릭 시 오픈하는 open nav -->
+        <div class="open_nav">
+            <!-- 닫기버튼 -->
+            <button id="nav_close" type="button"><img src="./images/nav_close.png" alt="닫기"></button>
+            <!-- 광고슬라이드 -->
+            <div class="swiper" id="nav_adver">
+                <div class="swiper-wrapper">
+                    <div class="swiper-slide"><a href="#">나에게 어울리는 제품을 찾으세요? 실시간 라이브 채팅으로 제품 추천을 받아보세요.</a></div>
+                    <div class="swiper-slide"><a href="#">선물하기 서비스를 통해 소중한 분께 마음을 전하세요.</a></div>
+                    <div class="swiper-slide"><a href="#">무료배송/ 반품 서비스로  젠틀몬스터를 경험해보세요.</a></div>
+                </div><!-- end swiper-wrapper -->
+                <div class="swiper-button-prev"></div>
+                <div class="swiper-button-next"></div>
+            </div>
+            <!-- 네비게이션 -->
+            <nav>
+                <a href="#">선글라스<span></span></a>
+                <a href="#">안경<span></span></a>
+                <a href="#">콜라보레이션<span></span></a>
+                <a href="#">스타일<span></span></a>
+                <a href="#">브랜드이슈<span></span></a>
+                <a href="#">매장보기<span></span></a>
+                <a href="#">수리서비스<span></span></a>
+            </nav>
         </div>
     </header>
     <main></main>
