0803 open_nav, after

--- a/index.html
+++ b/index.html
@@ -49,13 +49,13 @@
             </div>
             <!-- 네비게이션 -->
             <nav>
-                <a href="#">선글라스<span></span></a>
-                <a href="#">안경<span></span></a>
-                <a href="#">콜라보레이션<span></span></a>
-                <a href="#">스타일<span></span></a>
-                <a href="#">브랜드이슈<span></span></a>
-                <a href="#">매장보기<span></span></a>
-                <a href="#">수리서비스<span></span></a>
+                <a href="#">선글라스</a>
+                <a href="#">안경</a>
+                <a href="#">콜라보레이션</a>
+                <a href="#">스타일</a>
+                <a href="#">브랜드이슈</a>
+                <a href="#">매장보기</a>
+                <a href="#">수리서비스</a>
             </nav>
         </div>
     </header>
