js opennav transform-translateX

--- a/index.html
+++ b/index.html
@@ -59,6 +59,8 @@
             </nav>
         </div>
     </header>
+    <!-- header, footer 웹페이지 공통영역 적용 JS -->
+    <script src="./script/common.js"></script>
     <main></main>
     <footer></footer>
 </body>
