main visual 동영상크기 화면에 맞추기

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <link rel="stylesheet" href="./styles/reset.css">
     <link rel="stylesheet" href="./styles/common.css">
     <link rel="stylesheet" href="./styles/index.css">
+    <link rel="stylesheet" href="./styles/responsive.css">
 </head>
 <body>
     <header>
@@ -60,8 +61,32 @@
         </div>
     </header>
     <!-- header, footer 웹페이지 공통영역 적용 JS -->
-    <script src="./script/common.js"></script>
-    <main></main>
+    <main>
+        <div class="visual">
+            <div class="txt">
+                <p>데이제르와 함께 협업 컬렉션을 만나보세요</p>
+                <h1>GENTLE MONSTER D`HEYGERE</h1>
+                <div class="link">
+                    <a href="#">컬렉션 보러가기</a>
+                    <a href="#">자세히 보기</a>
+                </div>
+            </div>
+            <video src="./video/visual.mp4" autoplay loop muted></video>
+        </div>
+        <!-- main 2.bnr -->
+        <div class="adver_bnr">
+            <!-- background image -->
+            <div class="txt">
+                <P>볼드 컬렉션 2차 드롭을 만나보세요</P>
+                <h2>BOLD COLLECTION</h2>
+                <div class="link">
+                    <a href="#">구매하기</a>
+                    <a href="#">자세히 보기</a>
+                </div>
+            </div>
+        </div>
+    </main>
     <footer></footer>
+    <script src="./script/common.js"></script>
 </body>
 </html>
