--- a/index.html
+++ b/index.html
@@ -84,6 +84,33 @@
                     <a href="#">자세히 보기</a>
                 </div>
             </div>
+        </div><!-- bnr end -->
+        <!-- main3 service -->
+        <div id="online_service"><!-- bg -->
+            <div class="txt">
+                <h1>온라인 프로덕트 서비스</h1>
+                <p>
+                    오프라인 매장 방문이 어려우신가요?<br>
+                    전 세계 어디에서든 온라인으로 서비스를 신청해 보세요.<br>
+                    수리를 마친 제품은 고객님이 계신 곳으로 안전하게 보내드립니다.<br>
+                    구매 당시의 설렘을 느낄 수 있도록,  제품의 전반적인 컨디션도 함께<br>
+                    점검해드립니다.
+                </p>
+                <a href="#" class="service_link">접수하기</a>
+            </div>
+        </div>
+        <div id="shop_service"><!-- bg -->
+            <div class="txt">
+                <h1>매장 내 서비스</h1>
+                <p>
+                    고객님의 편안한 제품 사용을 위하여<br>
+                    전세계 오프라인 매장에서 맞춤 피팅 서비스를 무상으로 지원합니다.<br>
+                    코패드와 나사, 로고와 같은 소모부품도 현장에서 교체 가능합니다. <br>
+                    매장 내에서 진행이 어려운 서비스의 경우, 프로덕트 서비스팀으로<br>
+                    이관될 수 있도록 수리 접수를 도와드립니다
+                </p>
+                <a href="#" class="service_link">가까운 매장찾기</a>
+            </div>
         </div>
     </main>
     <footer></footer>
