--- a/login.html
+++ b/login.html
@@ -3,9 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="keywords" content="젠틀몬스터, 안경, 선글라스, 아이웨어">
-    <meta name="description" content="아이웨어브랜드 젠틀몬스터입니다">
-    <title>젠틀몬스터</title>
+    <title>LOGIN | GENTLE MONSTER</title>
     <!-- swiper slide -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css"/>
     <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
@@ -15,22 +13,21 @@
     <!-- 외부스타일시트 -->
     <link rel="stylesheet" href="./styles/reset.css">
     <link rel="stylesheet" href="./styles/common.css">
-    <link rel="stylesheet" href="./styles/index.css">
-    <link rel="stylesheet" href="./styles/responsive.css">
+    <link rel="stylesheet" href="./styles/login.css">
 </head>
 <body>
     <header>
-        <h1><a href="#"><img src="./images/logo.png" alt="GENTLE MONSTER"></a></h1>
+        <h1><a href="./index.html"><img src="./images/logo.png" alt="GENTLE MONSTER"></a></h1>
         <div class="right">
             <a href="#" class="lang">Shop in KR</a>
             <form action="#" method="get" id="searchFrm">
                 <fieldset>
                     <legend class="skip">검색양식</legend>
-                    <input type="text" id="search" placeholder="상품명을 입력해주세요" autofocus>
+                    <input type="text" id="search" placeholder="상품명을 입력해주세요" >
                     <button type="submit" id="searchBtn"><img src="./images/icon_search.png" alt="검색"></button>
                 </fieldset>
             </form>
-            <a href="./login.html" id="login"><img src="./images/icon_login.png" alt="로그인"></a>
+            <a href="#" id="login"><img src="./images/icon_login.png" alt="로그인"></a>
             <a href="#" id="cart"><img src="./images/icon_cart.png" alt="장바구니"></a>
             <a href="#" id="nav"><img src="./images/icon_menu.png" alt="메뉴"></a>
         </div>
@@ -60,58 +57,49 @@
             </nav>
         </div>
     </header>
-    <!-- header, footer 웹페이지 공통영역 적용 JS -->
     <main>
-        <div class="visual">
-            <div class="txt">
-                <p>데이제르와 함께 협업 컬렉션을 만나보세요</p>
-                <h1>GENTLE MONSTER D`HEYGERE</h1>
-                <div class="link">
-                    <a href="#">컬렉션 보러가기</a>
-                    <a href="#">자세히 보기</a>
-                </div>
+        <section class="user_login">
+            <h2>LOGIN</h2>
+            <form action="#" method="post" id="loginFrm">
+                <fieldset>
+                    <legend class="skip">로그인양식</legend>
+                    <div class="input">
+                        <input type="email" name="user_id" id="user_id" placeholder="이메일" autofocus>
+                        <input type="password" name="user_pw" id="user_pw" placeholder="비밀번호">
+                    </div>
+                    <p class="error"></p>
+                    <button type="button" id="login_btn">로그인</button>
+                </fieldset>
+            </form><!-- 로그인frm end -->
+            <div class="join">
+                <a href="#">비밀번호 찾기</a>
+                <a href="#">회원가입</a>
             </div>
-            <video src="./video/visual.mp4" autoplay loop muted></video>
-        </div>
-        <!-- main 2.bnr -->
-        <div class="adver_bnr">
-            <!-- background image -->
-            <div class="txt">
-                <P>볼드 컬렉션 2차 드롭을 만나보세요</P>
-                <h2>BOLD COLLECTION</h2>
-                <div class="link">
-                    <a href="#">구매하기</a>
-                    <a href="#">자세히 보기</a>
-                </div>
+            <div class="sns">
+                <h3>SNS 계정으로 간편 로그인</h3>
+                <ul>
+                    <li><a href="#"><img src="./images/sns_01.png" alt="카카오톡"></a></li>
+                    <li><a href="#"><img src="./images/sns_02.png" alt="구글"></a></li>
+                    <li><a href="#"><img src="./images/sns_03.png" alt="네이버"></a></li>
+                    <li><a href="#"><img src="./images/sns_04.png" alt="애플"></a></li>
+                    <li><a href="#"><img src="./images/sns_05.png" alt="페이스북"></a></li>
+                </ul>
             </div>
-        </div><!-- bnr end -->
-        <!-- main3 service -->
-        <div id="online_service"><!-- bg -->
-            <div class="txt">
-                <h1>온라인 프로덕트 서비스</h1>
-                <p>
-                    오프라인 매장 방문이 어려우신가요?<br>
-                    전 세계 어디에서든 온라인으로 서비스를 신청해 보세요.<br>
-                    수리를 마친 제품은 고객님이 계신 곳으로 안전하게 보내드립니다.<br>
-                    구매 당시의 설렘을 느낄 수 있도록,  제품의 전반적인 컨디션도 함께<br>
-                    점검해드립니다.
-                </p>
-                <a href="#" class="service_link">접수하기</a>
-            </div>
-        </div>
-        <div id="shop_service"><!-- bg -->
-            <div class="txt">
-                <h1>매장 내 서비스</h1>
-                <p>
-                    고객님의 편안한 제품 사용을 위하여<br>
-                    전세계 오프라인 매장에서 맞춤 피팅 서비스를 무상으로 지원합니다.<br>
-                    코패드와 나사, 로고와 같은 소모부품도 현장에서 교체 가능합니다. <br>
-                    매장 내에서 진행이 어려운 서비스의 경우, 프로덕트 서비스팀으로<br>
-                    이관될 수 있도록 수리 접수를 도와드립니다
-                </p>
-                <a href="#" class="service_link">가까운 매장찾기</a>
-            </div>
-        </div>
+        </section><!-- user login end -->
+        <section class="guest">
+            <a href="#">비회원 주문 조회하기</a>
+            <form action="#" method="post" id="guestFrm">
+                <fieldset>
+                    <legend class="skip">비회원조회양식</legend>
+                    <div class="input">
+                        <input type="text" name="guest_num" id="guest_num" placeholder="주문번호 ( '-' 없이 숫자만 입력해주세요 )">
+                        <input type="email" name="guest_mail" id="guest_mail" placeholder="이메일">
+                    </div>
+                    <p class="error"></p>
+                    <button type="button" id="guest_btn">주문조회</button>
+                </fieldset>
+            </form>
+        </section>
     </main>
     <footer>
         <div class="f_menu">
@@ -159,5 +147,6 @@
         </div>
     </footer>
     <script src="./script/common.js"></script>
+    <script src="./script/login.js"></script>
 </body>
 </html>
