--- a/login.html
+++ b/login.html
@@ -16,47 +16,8 @@
     <link rel="stylesheet" href="./styles/login.css">
 </head>
 <body>
-    <header>
-        <h1><a href="./index.html"><img src="./images/logo.png" alt="GENTLE MONSTER"></a></h1>
-        <div class="right">
-            <a href="#" class="lang">Shop in KR</a>
-            <form action="#" method="get" id="searchFrm">
-                <fieldset>
-                    <legend class="skip">검색양식</legend>
-                    <input type="text" id="search" placeholder="상품명을 입력해주세요" >
-                    <button type="submit" id="searchBtn"><img src="./images/icon_search.png" alt="검색"></button>
-                </fieldset>
-            </form>
-            <a href="#" id="login"><img src="./images/icon_login.png" alt="로그인"></a>
-            <a href="#" id="cart"><img src="./images/icon_cart.png" alt="장바구니"></a>
-            <a href="#" id="nav"><img src="./images/icon_menu.png" alt="메뉴"></a>
-        </div>
-        <!-- nav 클릭 시 오픈하는 open nav -->
-        <div class="open_nav">
-            <!-- 닫기버튼 -->
-            <button id="nav_close" type="button"><img src="./images/nav_close.png" alt="닫기"></button>
-            <!-- 광고슬라이드 -->
-            <div class="swiper" id="nav_adver">
-                <div class="swiper-wrapper">
-                    <div class="swiper-slide"><a href="#">나에게 어울리는 제품을 찾으세요? 실시간 라이브 채팅으로 제품 추천을 받아보세요.</a></div>
-                    <div class="swiper-slide"><a href="#">선물하기 서비스를 통해 소중한 분께 마음을 전하세요.</a></div>
-                    <div class="swiper-slide"><a href="#">무료배송/ 반품 서비스로  젠틀몬스터를 경험해보세요.</a></div>
-                </div><!-- end swiper-wrapper -->
-                <div class="swiper-button-prev"></div>
-                <div class="swiper-button-next"></div>
-            </div>
-            <!-- 네비게이션 -->
-            <nav>
-                <a href="#">선글라스</a>
-                <a href="#">안경</a>
-                <a href="#">콜라보레이션</a>
-                <a href="#">스타일</a>
-                <a href="#">브랜드이슈</a>
-                <a href="#">매장보기</a>
-                <a href="#">수리서비스</a>
-            </nav>
-        </div>
-    </header>
+    <!-- header -->
+    <?php include ('./header.php') ?>
     <main>
         <section class="user_login">
             <h2>LOGIN</h2>
@@ -101,51 +62,8 @@
             </form>
         </section>
     </main>
-    <footer>
-        <div class="f_menu">
-            <dl class="service">
-                <dt>고객서비스</dt>
-                <dd><a href="#">문의</a></dd>
-                <dd><a href="#">배송</a></dd>
-                <dd><a href="#">서비스</a></dd>
-                <dd><a href="#">교환 및 반품</a></dd>
-                <dd><a href="#">주문조회</a></dd>
-                <dd><a href="#">주문취소</a></dd>
-                <dd><a href="#">매장 픽업 서비스</a></dd>
-                <dd><a href="#">수리서비스 가이드</a></dd>
-                <dd><a href="#">제품 사용 가이드</a></dd>
-                <dd><a href="#">정품인증</a></dd>
-                <dd><a href="#">FAQ</a></dd>
-            </dl>
-            <dl class="law">
-                <dt>법적고지</dt>
-                <dd><a href="#">공지사항</a></dd>
-                <dd><a href="#">이용약관</a></dd>
-                <dd><a href="#">개인정보처리방침</a></dd>
-                <dd><a href="#">쿠키 정책</a></dd>
-                <dd><a href="#">기프트카드 이용약관</a></dd>
-            </dl>
-            <dl class="sns">
-                <dt>소셜미디어</dt>
-                <dd><a href="#">페이스북</a></dd>
-                <dd><a href="#">인스타그램</a></dd>
-                <dd><a href="#">유튜브</a></dd>
-                <dd><a href="#">트위터</a></dd>
-                <dd><a href="#">카카오톡</a></dd>
-                <dd><a href="#">핀터레스트</a></dd>
-                <dd><a href="#">위쳇</a></dd>
-                <dd><a href="#">웨이보</a></dd>
-            </dl>
-        </div>
-        <div class="f_copy">
-            <p class="logo"><a href="#"><img src="./images/logo.png" alt="GENTLE MONSTER"></a></p>
-            <address>
-                주) 아이아이컴바인드 | 대표자명: 김한국 | 사업자번호: 119-86-38589 | 통신판매신고번호: 제 2014-서울마포-1050 호 (사업자 정보 확인) | 
-                이메일 문의: <a href="">cs@gentlemonster.com</a>  | 개인정보보호책임자: 정태호 | 주소: 서울특별시 마포구 어울마당로5길 41 | 대표번호: <a href="#">1600-2126</a><br>
-                고객님의 안전한 현금자산 거래를 위하여 하나은행과 채무지급보증계약을 체결하여 보장해드리고 있습니다. <a href="#">서비스 가입사실 확인</a>
-            </address>
-        </div>
-    </footer>
+    <!-- footer -->
+    <?php include ('./footer.php') ?>
     <script src="./script/common.js"></script>
     <script src="./script/login.js"></script>
 </body>
