--- a/product_list.html
+++ b/product_list.html
@@ -17,7 +17,7 @@
 </head>
 <body>
     <!-- header.php -->
-    <!-- <?php include ('./header.php') ?> -->
+    <?php include ('./header.php') ?>
     <main>
         <!-- 1. swipe-slide -->
         <div class="swiper" id="product_slide">
@@ -224,12 +224,10 @@
 -->
             </div>
         </div>
-        
-        
     </main>
     <!-- footer.php -->
-    <!-- <?php include ('./footer.php') ?> -->
-    <!-- <script src="./script/common.js"></script> -->
+    <?php include ('./footer.php') ?>
+    <script src="./script/common.js"></script>
     <script src="./script/product.js"></script>
     <!-- 특정 페이지에만 해당하는 js 동작 기능은 내부 스크립트로 작성해도 된다. -->
     <!-- product_slide 기능은 product_list.html 에만 존재한다 (내부) -->
